# NDLMPanel-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/ndlmpanel_agent/: __init__.py  config.py
src/ndlmpanel_agent/agent/: conversation_context_manager.py  orchestrator.py
src/ndlmpanel_agent/exceptions/: __init__.py  tool_exceptions.py
src/ndlmpanel_agent/llm/: chat_completion_client.py
src/ndlmpanel_agent/models/: chat_models.py  database_models.py  service_models.py  system_monitor_models.py  user_models.py
src/ndlmpanel_agent/models/agent/: chat_models.py  conversation_models.py  safety_models.py  tool_models.py
src/ndlmpanel_agent/models/ops/: common_models.py
src/ndlmpanel_agent/models/ops/filesystem/: filesystem_models.py
src/ndlmpanel_agent/models/ops/firewall/: firewall_models.py
src/ndlmpanel_agent/models/ops/misc/: docker_models.py  log_models.py  nginx_models.py  system_info_models.py
src/ndlmpanel_agent/models/ops/network/: network_models.py
src/ndlmpanel_agent/safety/: __init__.py  safety_guard.py
src/ndlmpanel_agent/tools/: __init__.py  database_tools.py  docker_tools.py  filesystem_tools.py  firewall_tools.py  log_tools.py  network_tools.py  nginx_tools.py  process_tools.py  service_tools.py  system_info_tools.py  system_monitor_tools.py  tool_registry.py  user_tools.py
src/ndlmpanel_agent/tools/ops/: _command_runner.py
src/ndlmpanel_agent/tools/ops/misc/: log_tools.py  (+4 more)
tests/: temp_test.py  test_all_tools.py  test_conversation_context.py  test_grep_simple.py  test_llm_client.py  test_react_loop.py  test_tool_registry.py
(+8 files in other folders)
