[project]
name = "ndlmpanel-agent"
version = "0.1.0"
description = "智能运维Agent模块"
readme = "README.md"
authors = [
    { name = "Raix2215", email = "2215690672@qq.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai>=1.86.0",       # LLM 客户端（兼容国内模型）
    "psutil>=7.2.2",
    "pydantic>=2.0",        # 数据模型
]

[build-system]
requires = ["uv_build>=0.11.5,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.4",            # 代码检查
]
